--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Intro Pattern Matcher – ffmpeg.wasm (GitHub Pages)</title>
+  <title>Intro Pattern Matcher</title>
   <style>
     body { font-family: Arial, Helvetica, sans-serif; margin: 24px; }
     h1 { font-size: 18px; margin: 0 0 8px; }
