--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </style>
 </head>
 <body>
-  <h1>Intro Pattern Matcher – ffmpeg.wasm (GitHub Pages)</h1>
-  <div class="muted">Client-side PoC: create and store an intro pattern from a reference file, then detect the intro start in the first N minutes of new files. No uploads.</div>
+  <h1>Intro Pattern Matcher</h1>
+  <div class="muted">Create and store an intro pattern from a reference file, then detect the intro start in the first N minutes of new files.</div>
 
   <div class="card">
     <div class="row">
